--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ html,body{
 }
 header{
 	width: 100%;
-	height: 15%;
+	height: 18%;
 	padding: 1% 3%;
 	box-sizing: border-box;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -21,29 +21,44 @@ header ul{
 	flex-wrap: wrap;
 }
 .operate{
-	width: 90px;
+	width: 88px;
 }
 .tool{
-	width: 165px;
+	width: 88px;
 }
 .shape{
-	width: 165px;
+	width: 134px;
 }
 .style{
-	width: 102px;
+	width: 150px;
 	border-right: 1px solid #ccc;
 }
 header ul li{
-	height: 20px;
+	/* height: 20px; */
 	margin: 5px;
+	padding: 2px 5px;
 	border: 1px solid #ccc;
+	border-radius: 20%;
+}
+header ul a{
+	display: block;
+	/* height: 20px; */
+	margin: 5px;
+	color: #000;
+	margin: 5px;
+	padding: 2px 5px;
+	border: 1px solid #ccc;
+	border-radius: 20%;
+}
+header ul li input{
+	width: 26px;
 }
 header ul .active{
-	background: skyblue;
+	color: skyblue;
 }
 section{
 	width: 100%;
-	height: 85%;
+	height: 82%;
 	position: relative;
 }
 canvas{
@@ -60,11 +75,90 @@ section .mask{
 	display: none;
 }
 section .opacity{
-	width: 800px;
-	height: 500px;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0);
 	position: absolute;
 	top: 0;
 	top: 0;
 	z-index: 999;
+}
+.icon-qianbi{
+	font-size: 30px;
+    line-height: 18px;
+}
+
+.icon-line{
+	font-size: 20px;
+}
+
+.icon-tianchong{
+	font-size: 24px;
+    line-height: 20px;
+}
+
+.icon-star01{
+	font-size: 24px;
+    line-height: 22px;
+}
+
+.icon-qianbi1{
+	font-size: 20px;
+}
+
+.icon-juxing{
+	font-size: 24px;
+}
+
+.icon-xiangpica{
+	font-size: 22px;
+    line-height: 22px;
+}
+
+.icon-iconfontwancheng{
+	font-size: 20px;
+}
+
+.icon-bianjie{
+	font-size: 20px;
+}
+
+.icon-duobianxing{
+	font-size: 22px;
+    line-height: 22px;
+}
+
+.icon-xuxian{
+	font-size: 20px;
+}
+
+.icon-cuxixiantiao{
+	font-size: 20px;
+}
+.icon-jiandao{
+	font-size: 20px;
+}
+.icon-wenzi{
+	font-size: 20px;
+}
+.icon-add{
+	font-size: 20px;
+}
+.icon-baocun{
+	font-size: 22px;
+}
+.icon-chexiao{
+	font-size: 20px;
+}
+.icon-qingkong{
+	font-size: 20px;
+}
+.clip{
+	width: 100px;
+	height: 100px;
+	border: 1px dashed #ccc;
+	position: absolute;
+	top: 0;
+	left: 0;
 	display: none;
 }
